# patch-build-rs

./: .#others.tar  .gitignore  .gitmodules  ARCHITECTURE.md  AUDIT_TICKETS.md  AUTOMORPHIC_RING.md  CHANGELOG.md  CONTEXT_KNAPSACK.md  CURRENT_PLAN.md  Cargo.toml  DAO_GOVERNANCE.md  EMOJI_POETRY.md  LEAN4_FORMAL_PROOFS.md  LFUNCTION_UNITY.md  MACRO_AUDIT_REPORT.md  MACRO_INVENTORY.md  MONSTER_MORPHISM.md  README.md  README_updated.md  RUST_NIX_INTEGRATION.md  SYSTEM_SUMMARY.md  TODO.md  TOP_10_REAL_DUPLICATES.md  ZK_MORPHISM_PROOF.md  build-rust-with-macros.sh  build.rs  commit_system.sh  doit.sh  explanation.md  flake.nix  get_rustc_src.sh  mev_patterns.toml  others.tar  plan.md  quine_languages.toml  reduce_ttl.rs  refactor.toml  rust-with-macros.nix
autowrap_tool/: Cargo.toml
autowrap_tool/src/: do_patterns.rs~  lib.rs  lib.rs~
code-finder/code_finder_macros/: Cargo.toml
code-finder/code_finder_macros/src/: lib.rs  lib_updated.rs
emoji-macros/: Cargo.toml
emoji-macros-core/: Cargo.toml
emoji-macros-core/src/: lib.rs
emoji-macros/arrows-macro/: Cargo.toml
emoji-macros/arrows-macro/src/: lib.rs
emoji-macros/ballot-macro/: Cargo.toml
emoji-macros/ballot-macro/src/: lib.rs
emoji-macros/bandage-macro/: Cargo.toml
emoji-macros/bandage-macro/src/: lib.rs
emoji-macros/broom-macro/: Cargo.toml
emoji-macros/broom-macro/src/: lib.rs
emoji-macros/bullseye-macro/: Cargo.toml
emoji-macros/bullseye-macro/src/: lib.rs
emoji-macros/chart-macro/: Cargo.toml
emoji-macros/chart-macro/src/: lib.rs
emoji-macros/dna-macro/: Cargo.toml
emoji-macros/dna-macro/src/: lib.rs
emoji-macros/fork-knife-macro/: Cargo.toml
emoji-macros/fork-knife-macro/src/: lib.rs
emoji-macros/forty-two-macro/: Cargo.toml
emoji-macros/forty-two-macro/src/: lib.rs
emoji-macros/gem-macro/: Cargo.toml
emoji-macros/gem-macro/src/: lib.rs
emoji-macros/growth-macro/: Cargo.toml
emoji-macros/growth-macro/src/: lib.rs
emoji-macros/halo-macro/: Cargo.toml
emoji-macros/halo-macro/src/: lib.rs
emoji-macros/herb-macro/: Cargo.toml
emoji-macros/herb-macro/src/: lib.rs
emoji-macros/idea-macro/: Cargo.toml
emoji-macros/idea-macro/src/: lib.rs
emoji-macros/lock-macro/: Cargo.toml
emoji-macros/lock-macro/src/: lib.rs
emoji-macros/magnifying-glass-macro/: Cargo.toml
emoji-macros/magnifying-glass-macro/src/: lib.rs
emoji-macros/map-macro/: Cargo.toml
emoji-macros/map-macro/src/: lib.rs
emoji-macros/moai-macro/: Cargo.toml
emoji-macros/moai-macro/src/: lib.rs
emoji-macros/money-macro/: Cargo.toml
emoji-macros/money-macro/src/: lib.rs
emoji-macros/notes-macro/: Cargo.toml
emoji-macros/notes-macro/src/: lib.rs
emoji-macros/octopus-macro/: Cargo.toml
emoji-macros/octopus-macro/src/: lib.rs
emoji-macros/owl-macro/: Cargo.toml
emoji-macros/package-macro/: Cargo.toml
emoji-macros/reset-macro/: Cargo.toml
emoji-macros/robot-macro/: Cargo.toml
emoji-macros/rocket-macro/: Cargo.toml
emoji-macros/scroll-macro/: Cargo.toml
emoji-macros/sparkle-macro/: Cargo.toml
emoji-macros/src/: lib.rs
emoji-macros/temple-macro/: Cargo.toml
emoji-macros/truck-macro/: Cargo.toml
emoji-macros/up-arrow-macro/: Cargo.toml
emoji-macros/web-macro/: Cargo.toml
examples/: Cargo.toml  autowrap_example.rs  blockchain_to_code.rs  compiler_inventory_analysis.rs  complete_rustc_analysis.rs  context_knapsack.rs  dao_lfunction.rs  data_reduction.rs  duplicate_code_analysis.rs  emoji_poetry_universe.rs  event_memory_system.rs  full_analysis_demo.rs  generated_macros_demo.rs  goedelian_braid.rs  lean4_formal_proofs.rs  lean4_json_export.rs  lean4_rust_mirror.rs  lfunction_unity.rs  macro_lattice_demo.rs  macro_usage_report.rs  mev_protection.rs  mkbuildrs_demo.rs  monster_morphism.rs  real_data_reports.rs  repo_duplicate_finder.rs  ring_build.rs  rust_eigenmatrix_analysis.rs  rust_in_nix_example.rs  rust_nix_build.rs  rustc_ring_analysis.rs  rustc_unity.cnf  template_checker_demo.rs  zk_morphism_proof.rs
examples/basic_build_script/: Cargo.toml
examples/emoji_state_machine/: Cargo.toml  build.rs  meme_input.txt
examples/find_rustc_example/: Cargo.toml
examples/my_example_build_script/: Cargo.toml  build.rs
examples/self_application/: Cargo.toml  README.md  build.rs
examples/solfunmeme/: Cargo.toml  README.md  build.rs
grast_cli/: Cargo.toml
grast_cli/src/: main.rs
grast_core/: Cargo.toml
grast_core/src/: database.rs  flatten.rs  lib.rs  triple.rs
introspector_core/: Cargo.toml
introspector_core/src/: audit_macros.rs  audit_tickets.rs  auto_fix.rs  clippy_rules.rs  decl_macro.rs  decl_wrapper.rs  expr.rs  expr_cache.rs  header.rs  lib.rs  macro_report.rs  new_quote_trait.rs  new_quote_trait.rs~  nix_rustc.rs  pureprogram.rs
introspector_decl2_macros/: Cargo.toml  Cargo.toml~
introspector_decl2_macros/src/: lib.rs  lib.rs~
introspector_decl_core/: Cargo.toml  Cargo.toml~
introspector_decl_core/src/: lib.rs
mkslop-core/: Cargo.toml
mkslop-core/src/: lib.rs
mkslop-macros/: Cargo.toml
mkslop-macros/src/: lib.rs
patch-build-rs-macros/: Cargo.toml  build.rs  legacy_macros.rs
patch-build-rs-macros/src/: #lib.rs#  autoheader.rs  code_search.rs  compile_cache.rs  compiler_inventory.rs  context_knapsack.rs  dao_governance.rs  decl_attr.rs  duplicate_analysis.rs  emoji_poetry.rs  event_memory.rs  extract.rs  gmp_macros.rs  graph_partition.rs  grast.rs  grast_macro.rs  lean4_json.rs  lean4_mirror.rs  lean4_proof.rs  lib.rs  lib_updated.rs  lmfdb_morph.rs  lru_cache.rs  macro_generator.rs  macro_lattice.rs  macroslop_driver.rs  mev_protection.rs  mkbuildrs.rs  nix_rustc_analysis.rs  ollama_macros.rs  public_item_wrapper.rs  pure_reflect.rs  quant_trading.rs  quine_relay.rs  real_data_analysis.rs  real_rustc_analysis.rs  repo_analysis.rs  rewriterustinrust_macros.rs  rust_eigenmatrix.rs  rust_nix.rs  (+9 more)
patch-build-rs-macros/tests/: lru_macro_tests.rs
shebling_macros/: Cargo.toml
shebling_macros/src/: lib.rs
solfun_macros/: Cargo.toml
solfun_macros/src/: lib.rs
src/: lib.rs  (+2 more)
test_macros_app/: Cargo.toml
test_macros_app/src/: main.rs
(+158 files in other folders)
