[workspace]
members = [
    "patch-build-rs-macros",
    "mkslop-core",
    "mkslop-macros",
    "nix2proc-macros",
    "examples",
    "grast_core",
    "grast_cli",
    "code-finder", # New crate for demonstrating grep2code morphism
    "shebling_macros", # New crate for shebling! macro
    "solfun_macros", # New crate for fun and dev-ops macros
    # Eventually, we will add a binary crate here, e.g., "patch-build-cli"
]

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
toml = "0.8"
toml_edit = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
once_cell = "1.19"
directories = "5.0"
walkdir = "2.5"
shebling_macros = { path = "shebling_macros", proc-macro = true }

[package]
name = "patch-build-rs"
version = "0.1.0"
edition = "2021"
description = "A core library and tools for applying semantic patches to Rust code."
license = "MIT"
# This is a placeholder for the main library if it's not a workspace root itself
# [lib]
# path = "src/lib.rs"

[dependencies]
patch-build-rs-macros = { path = "patch-build-rs-macros" }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
inventory = "0.3"
# Add a dependency to rust-self-heal-core once it's set up and available
# rust-self-heal-core = { path = "../rust-self-heal-core" }

[build-dependencies]
patch-build-rs-macros = { path = "patch-build-rs-macros" }
mkslop-macros = { path = "mkslop-macros" }
