[package]
name = "grast_core"
version = "0.1.0"
edition = "2021"
description = "Core library for Greppable AST (GRAST) representation and manipulation."
license = "MIT"

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits", "visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true } # Needed for syn::spanned::Spanned and other macro-related types
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
