[package]
name = "introspector_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "introspector_core"
path = "src/lib.rs"

[dependencies]
# Dependencies for Expr and PureProgram if any, e.g., serde for derive
serde = { workspace = true, features = ["derive"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
proc-macro2 = { workspace = true }
lru = "0.12"
once_cell = "1.19"
