[package]
name = "introspector_decl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { workspace =true } # = "2.0.111", features = ["full", "extra-traits", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
introspector_decl_common = { workspace = true }
introspector_macro_helpers = { workspace = true } # For generate_decl_registration!
