[package]
name = "mkslop-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# Dependencies required for proc-macros
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true } # For error handling
mkslop-core = { path = "../mkslop-core" } # Dependency on our core logic library
