[package]
name = "patch-build-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
once_cell = { workspace = true }
introspector_core = { workspace = true }
# Add any other specific dependencies as needed from workspace.dependencies