[package]
name = "patch-build-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true } # Already present
walkdir = { workspace = true }
once_cell = { workspace = true }
introspector_core = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
semver = { workspace = true, optional = true } # Add semver

[features]
ollama_reqwest = ["reqwest"]
ollama_semver = ["semver"] # Add feature for semver