[package]
name = "solfun_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
# Add any other specific dependencies needed for individual macros later.
# For example, if we eventually integrate LLM APIs, relevant HTTP clients and serde will be added.
