[package]
name = "code_finder_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] } # "extra-traits" for Debug, etc.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
brush-parser = "0.3"
