[package]
name = "self-application-example"
version = "0.1.0"
edition = "2021"

[dependencies]
patch-build-rs-macros = { path = "../../patch-build-rs-macros" }
mkslop-macros = { path = "../../mkslop-macros" }
nix2proc-macros = { path = "../../nix2proc-macros" }

[build-dependencies]
patch-build-rs-macros = { path = "../../patch-build-rs-macros" }
mkslop-macros = { path = "../../mkslop-macros" }
nix2proc-macros = { path = "../../nix2proc-macros" }
