[package]
name = "solfunmeme"
version = "0.1.0"
edition = "2021"

[dependencies]
patch-build-rs-macros = { path = "../../patch-build-rs-macros" }
mkslop-macros = { path = "../../mkslop-macros" }

[build-dependencies]
patch-build-rs-macros = { path = "../../patch-build-rs-macros" }
mkslop-macros = { path = "../../mkslop-macros" }
